--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -7,7 +7,7 @@
     <!-- Group 587 -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/group_587"
-        android:layout_width="326dp"
+        android:layout_width="0dp"
         android:layout_height="80dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -16,13 +16,14 @@
         <!-- Group 368 -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/group_368"
-            android:layout_width="320dp"
+            android:layout_width="0dp"
             android:layout_height="24.14dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:background="#00000000"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="MissingConstraints">
@@ -58,7 +59,7 @@
         <!-- Group 614 -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/group_614"
-            android:layout_width="319dp"
+            android:layout_width="0dp"
             android:layout_height="30dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
