--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,8 +9,11 @@
     <color name="white">#FFFFFFFF</color>
 
     <!--  App Colors  -->
-    <color name="mms_green_11">#F7FEFF</color>
+    <color name="mms_green_11">#333333</color>
 
+
+
+    <color name="mms_gray_1">#141414</color>
     <color name="mms_black_1">#141414</color>
     <color name="mms_black_2">#333333</color>
     <color name="mms_black_3">#4D4D4D</color>
