--- a/app/src/main/res/layout/fragment_mentor_list.xml
+++ b/app/src/main/res/layout/fragment_mentor_list.xml
@@ -18,13 +18,6 @@
         <include layout="@layout/toolbar" />
     </androidx.appcompat.widget.Toolbar>
 
-
-
-
-
-
-
-
     <!-- Group 565 -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/group_565"
@@ -58,25 +51,25 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <!-- arrow-dropdown-caret-sort-select-arrow 2 -->
 
         <!-- arrow-dropdown-caret-sort-select-arrow 2 -->
         <RelativeLayout
             android:id="@+id/arrow_dropd"
-            android:layout_width="8dp"
-            android:layout_height="5.6dp"
+            android:layout_width="24dp"
+            android:layout_height="23.83dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:layout_alignParentBottom="true"
-             app:layout_constraintBottom_toBottomOf="@+id/body_1"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@drawable/arrow_dropdown_caret_sort_select_arrow_2"
+            android:clipToOutline="true"
+            app:layout_constraintBottom_toBottomOf="@+id/body_1"
             app:layout_constraintStart_toEndOf="@+id/body_1"
-            app:layout_constraintTop_toTopOf="@+id/body_1"
-            android:background="@drawable/arrow_dropd"
-            />
-
+            app:layout_constraintTop_toTopOf="@+id/body_1" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
     <!-- Frame 430 -->
     <RelativeLayout
         android:id="@+id/frame_430"
