--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,9 +20,6 @@
         <item name="android:textColor">#333333</item>
         <item name="fontFamily">@font/mukta</item>
         <item name="fontWeight">600</item>
-
-
-
     </style>
 
     <style name="peculiar_c_">
@@ -84,9 +81,13 @@
     <style name="about">
         <item name="android:textSize">16sp</item>
         <item name="fontFamily">@font/mukta</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+    <style name="current">
+        <item name="android:textSize">16sp</item>
+        <item name="fontFamily">@font/mukta</item>
         <item name="android:textColor">#F2F2F2</item>
     </style>
-
     <!-- styles.xml -->
     <style name="programs">
 
@@ -269,5 +270,54 @@
         <item name="android:textColor">#035D63</item>
 
     </style>
+
+    <style name="dec_12_2022">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#808080</item>
+        <item name="fontFamily">@font/mukta</item>
+    </style>
+
+    <style name="room_librar">
+        <item name="android:textSize">14sp</item>
+        <item name="fontFamily">@font/mukta</item>
+        <item name="fontWeight">600</item>
+        <item name="android:textColor">#333333</item>
+
+    </style>
+
+    <style name="assign_task">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#06B9C6</item>
+    </style>
+
+
+    <style name="maximum">
+        <item name="fontFamily">@font/mukta</item>
+        <item name="android:textSize">9sp</item>
+        <item name="fontWeight">800</item>
+        <item name="android:textColor">#035D63</item>
+    </style>
+
+
+
+    <style name="sort">
+        <item name="fontFamily">@font/mukta</item>
+        <item name="android:textSize">12sp</item>
+        <item name="fontWeight">800</item>
+        <item name="android:textColor">#F2F2F2</item>
+
+    </style>
+
+    <style name="google_afri_report">
+        <item name="fontFamily">@font/mukta</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#333333</item>
+    </style>
+
+    <style name="by_ibrahim_">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#808080</item>
+    </style>
+
 
 </resources>
