--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -319,5 +319,14 @@
         <item name="android:textColor">#808080</item>
     </style>
 
+    <style name="gads_cloud_">
+        <item name="lineHeight">19.79dp</item>
+        <item name="fontWeight">700</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#333333</item>
+
+
+    </style>
+
 
 </resources>
