--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -328,5 +328,156 @@
 
     </style>
 
+    <style name="google_afri_detailed_report">
+        <item name="lineHeight">20dp</item>
+        <item name="fontFamily">@font/mukta</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#333333</item>
+    </style>
+
+    <style name="major_achie">
+        <item name="lineHeight">27dp</item>
+        <item name="fontFamily">@font/mukta</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#333333</item>
+    </style>
+
+    <style name="major_achivement_text">
+
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#666666</item>
+        <item name="lineHeight">20dp</item>
+        <item name="fontFamily">@font/mukta</item>
+
+
+    </style>
+
+    <style name="major_blocker">
+        <item name="android:textSize">16sp</item>
+        <item name="fontFamily">@font/mukta</item>
+        <item name="android:textColor">#333333</item>
+    </style>
+
+    <style name="in_iaculis_">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#666666</item>
+        <item name="lineHeight">19.94dp</item>
+        <item name="fontWeight">400</item>
+        <item name="fontFamily">@font/mukta</item>
+    </style>
+
+    <style name="major_recom">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#333333</item>
+        <item name="lineHeight">26.98dp</item>
+        <item name="fontWeight">700</item>
+        <item name="fontFamily">@font/mukta</item>
+    </style>
+
+    <style name="nullam_quis">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#666666</item>
+        <item name="lineHeight">19.94dp</item>
+        <item name="fontWeight">400</item>
+        <item name="fontFamily">@font/mukta</item>
+
+
+    </style>
+
+    <style name="share">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#035D63</item>
+        <item name="lineHeight">27dp</item>
+        <item name="fontWeight">600</item>
+        <item name="fontFamily">@font/mukta</item>
+
+    </style>
+
+
+    <style name="share_1">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#035D63</item>
+        <item name="lineHeight">27dp</item>
+        <item name="fontWeight">600</item>
+        <item name="fontFamily">@font/mukta</item>
+
+
+    </style>
+
+
+    <style name="download">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#F2F2F2</item>
+        <item name="lineHeight">27dp</item>
+        <item name="fontWeight">600</item>
+        <item name="fontFamily">@font/mukta</item>
+
+    </style>
+
+    <style name="certificate_generate_date">
+
+        <item name="android:textSize">10dp</item>
+        <item name="android:textColor">@color/mms_black_5</item>
+        <item name="lineHeight">16.62dp</item>
+        <item name="fontWeight">400</item>
+        <item name="fontFamily">@font/mukta</item>
+
+    </style>
+
+    <style name="download_as">
+        <item name="android:textSize">16dp</item>
+        <item name="android:textColor">@color/mms_black_5</item>
+        <item name="lineHeight">26.62dp</item>
+        <item name="fontWeight">400</item>
+        <item name="fontFamily">@font/mukta</item>
+
+    </style>
+
+    <style name="dowload_as_file">
+        <item name="android:textSize">18dp</item>
+        <item name="android:textColor">@color/mms_black_5</item>
+        <item name="lineHeight">29.92dp</item>
+        <item name="fontWeight">400</item>
+        <item name="fontFamily">@font/mukta</item>
+
+    </style>
+
+    <style name="download_generate">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#F2F2F2</item>
+        <item name="lineHeight">29.29dp</item>
+        <item name="fontWeight">600</item>
+        <item name="fontFamily">@font/mukta</item>
+    </style>
+
+    <style name="_generate">Generate</style>
+
+    <style name="report_down">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/mms_pry_2</item>
+        <item name="lineHeight">29.29dp</item>
+        <item name="fontWeight">600</item>
+        <item name="fontFamily">@font/mukta</item>
+
+    </style>
+
+    <style name="share_Report">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#F2F2F2</item>
+        <item name="lineHeight">29.29dp</item>
+        <item name="fontWeight">600</item>
+        <item name="fontFamily">@font/mukta</item>
+    </style>
+
+    <style name="cancel">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/mms_pry_2</item>
+        <item name="lineHeight">29.29dp</item>
+        <item name="fontWeight">600</item>
+        <item name="fontFamily">@font/mukta</item>
+
+
+    </style>
+
 
 </resources>
